to user notifications

--- a/profapp/templates/company/portals_memberees.html
+++ b/profapp/templates/company/portals_memberees.html
@@ -115,7 +115,7 @@
                     {
                         name: 'membership.portal.name', type: 'link',
                         width: '200',
-                        href: 'portal_link(entity.membership.portal.host)', img_url: 'membership.portal.logo.url',
+                        href: 'portal_link(row.entity.membership.portal.host)', img_url: 'membership.portal.logo.url',
                         link: true
                     },
                     {
