--- a/profapp/templates/front/wood/layout.html
+++ b/profapp/templates/front/wood/layout.html
@@ -43,6 +43,7 @@
     {% include 'footer.html' %}
     <script src="{{ static_address('front/' + portal.layout.name + '/js/bootstrap.min.js') }}"></script>
     <script src="{{ static_address('front/' + portal.layout.name + '/js/jasny-bootstrap.min.js') }}"></script>
+    <script src="{{ static_address('front/' + portal.layout.name + '/js/clamp.min.js') }}"></script>
     <script src="{{ static_address('front/' + portal.layout.name + '/js/custom.js') }}"></script>
 </body>
 </html>
