--- a/profapp/templates/front/Forester/layout.html
+++ b/profapp/templates/front/Forester/layout.html
@@ -34,6 +34,7 @@
         {% if portal.advs['bottom_banner'] -%}
             {{ portal.advs['head_end']|safe }}
         {%- endif %}
+        {{ google_analytics(portal.google_analytics_web_property_id)|safe }}
     {% endblock %}
 </head>
 <body class="{% block body_class %}{% endblock %}">
