--- a/profapp/templates/front/Forester/layout.html
+++ b/profapp/templates/front/Forester/layout.html
@@ -25,8 +25,8 @@
         <link href="{{ static_address('front/' + portal.layout.name + '/css/custom.css') }}" rel="stylesheet">
         <link href="{{ static_address('css/article.css') }}" rel="stylesheet">
         <link href="{{ static_address('front/' + portal.layout.name + '/css/article.css') }}" rel="stylesheet">
-        <script src="//code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+        <script src="//code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
         <script src="{{ static_address('new/moment/moment.min.js') }}"></script>
         {% if g.lang != 'en' -%}
             <script src="{{ static_address('new/moment/' + g.lang + '.js') }}"></script>
